--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -22,10 +22,10 @@ jobs:
 
     - name: provision virtual machine in azure
       env:
-        RESOURCE_GROUP: rg-githubdeploy
-        RESOURCE_GROUP_REGION: uksouth
+        RESOURCE_GROUP: pruebarg
+        RESOURCE_GROUP_REGION: westeurope
         SERVER_NAME: githubactions
-        ADMIN_LOGIN: sarah
+        ADMIN_LOGIN: vfernandezg
       run: >
         powershell -command "& '${{ env.OUTPUT_PATH }}\IaC\AzCLI\vmcreation.ps1'" 
         -servicePrincipal ${{ secrets.SERVICE_PRINCIPAL_APPID }}
